<resources>
    <string name="app_name">MADassignment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_group">New group</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="group_name">Group Name</string>

    <string name="currency">currency</string>
    <string name="add_expense">add expense</string>

    <string name="ok">OK</string>
    //expense type
    <string name="shopping">shopping</string>
    <string name="food">food</string>
    <string name="bill">bill</string>
    <string name="other">other</string>
    <string name="trip">trip</string>
    <string name="home">home</string>
    <string name="edit_group">Edit</string>
    <string name="add_a_group">Create group</string>
    <string name="balance">Balance</string>


    //login
    <string name="prompt_userName">User Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="repeat">Repeat the Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_repeat">Not same with passord</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">sign up failed</string>

    <string name="yourname">your name</string>
    <string name="pin_join_group">Join Group With Pin</string>
    <string name="done">join</string>
    <string name="pin_code">Pin code</string>
    <string name="str_group_name">Group name</string>

    //invitation
    <string name="invitation_title">Invite a friend to this group</string>
    <string name="invitation_message">You are invited to a new group</string>
    <string name="invitation_deep_link">http://qing.lei/invite</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Join!</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="send_failed">Sending invitations failed(debug version, a SHA-1 is required</string>

    <string name="invitation_msg_fmt" formatted="false">You are invite to group \n %s</string>

    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="profile">Profile</string>
    <string name="expense_detail">Expense detail</string>
    <string name="exit_group">exit group</string>


    <string name="takephoto">Take a Photo</string>
    <string name="choosephoto">Choose from Photos</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_all_expenses">AllExpensesActivity</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
</resources>
