<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobile.madassignment.AddGroupActivity"
    android:background="@color/light_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/iv_new_group_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_a_group"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="164dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/shape">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="3dp"

            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout"
                android:layout_toEndOf="@+id/linearLayout"
                android:text="@string/yourname"
                android:textColor="@color/black"
                android:gravity="center"/>
            <EditText
                android:id="@+id/et_user_name"
                android:layout_marginLeft="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="3dp"

            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout"
                android:layout_toEndOf="@+id/linearLayout"
                android:text="@string/group_name"
                android:textColor="@color/black"
                android:gravity="center"/>
            <EditText
                android:id="@+id/et_group_name"
                android:layout_marginLeft="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="3dp"

            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout"
                android:layout_toEndOf="@+id/linearLayout"
                android:text="@string/currency"
                android:textColor="@color/black"
                android:gravity="center"/>
            <Spinner
                android:id="@+id/currency_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:gravity="end|center_vertical"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_add_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="87dp"
        android:text="done"
        android:background="@drawable/shape"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
